--- a/main.ipynb
+++ b/main.ipynb
@@ -1410,6 +1410,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Occupation Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -1430,17 +1437,17 @@
     "df = df.drop(columns=occu)\n",
     "\n",
     "occu_encodings = {col : occu.index(col) for col in occu}\n",
+    "df['occupation'] = df['occupation'].replace(occu_encodings)\n",
+    "\n",
+    "occu_encodings = {col : occu.index(col) for col in occu}\n",
     "df['occupation'] = df['occupation'].replace(occu_encodings)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 79,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "occu_encodings = {col : occu.index(col) for col in occu}\n",
-    "df['occupation'] = df['occupation'].replace(occu_encodings)"
+    "Correlation Heatmap"
    ]
   },
   {
@@ -1467,13 +1474,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "Removed Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "col = 'edyrs'\n",
     "\n",
-    "\n"
+    "quartiles = df[col].quantile([0.25, 0.75])\n",
+    "q1 = quartiles.loc[0.25]\n",
+    "q3 = quartiles.loc[0.75]\n",
+    "\n",
+    "low_bound = q1 - 1.5 * (q3 - q1)\n",
+    "upp_bound = q3 + 1.5 * (q3 - q1)\n",
+    "\n",
+    "df = df[(df[col] >= low_bound) & (df[col] <= upp_bound)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         metaread  age  female  race_nonwhite  edyrs     expyrs       wkwage  \\\n",
+      "0            5170   19       0              0  11.99   1.010000    92.857140   \n",
+      "2             680   30       0              0  11.99  12.010000   517.647095   \n",
+      "3            6780   21       1              0  13.35   1.650000   490.196075   \n",
+      "4            7470   40       1              0   7.23  24.000000   137.254913   \n",
+      "5            8120   42       1              0  12.00  24.000000  1714.285767   \n",
+      "...           ...  ...     ...            ...    ...        ...          ...   \n",
+      "1349253      5600   27       0              1  13.57   7.430000   242.424240   \n",
+      "1349254      8840   48       0              0  14.23  27.770000  2058.823486   \n",
+      "1349255      1600   23       0              0  14.23   2.770000   392.156860   \n",
+      "1349256       720   56       0              0  17.68  32.320000   613.725464   \n",
+      "1349257         0   54       1              0  13.35  34.650002   705.882324   \n",
+      "\n",
+      "         occupation  \n",
+      "0                 5  \n",
+      "2                 2  \n",
+      "3                 3  \n",
+      "4                 3  \n",
+      "5                 5  \n",
+      "...             ...  \n",
+      "1349253           4  \n",
+      "1349254           0  \n",
+      "1349255           1  \n",
+      "1349256           2  \n",
+      "1349257           0  \n",
+      "\n",
+      "[1335597 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
    ]
   }
  ],
